Rework imageLoader, fix LastUpdated episodes list
